perf: person_list 아이디 이름 맵 함수 코드 동일화