@@ -40,11 +40,11 @@ public class WtalkStatisticsPersonApiController extends ApiBaseController {
             if (search.getStartDate().after(search.getEndDate()))
                 throw new IllegalArgumentException("시작시간이 종료시간보다 이전이어야 합니다.");
 
-        final Map<String, String> personMap = personListRepository.findAll().stream().collect(Collectors.toMap(PersonList::getId, PersonList::getIdName));
+        final Map<String, String> personMap = personListRepository.getIdAndNameMap();
 
         final List<WtalkStatisticsPersonResponse> rows = new ArrayList<>();
         final List<StatWtalkEntity> list = wtalkStatisticsService.getRepository().personStatList(search);
-        final List<String> userIds = list.stream().map(StatWtalkEntity::getUserid).distinct().collect(Collectors.toList());
+        final List<String> userIds = list.stream().map(StatWtalkEntity::getUserid).distinct().toList();
 
         for(String userId : userIds){
             WtalkStatisticsPersonResponse row = new WtalkStatisticsPersonResponse();
